Fix illegal access